--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -16,9 +16,6 @@
   border-radius: 5px;
 }
 
-/* .preview-dialog::backdrop {
-  background: rgba(36, 35, 35, 0.6);
-} */
 
 .modal-img {
   width: 400px;
